Fixed checkboxes and action button alignment. Centered the rest of the content in the row

--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -432,9 +432,12 @@ table.dataTable tbody > tr.selected, table.dataTable tbody>tr>.selected{
 		}
 	}
 }
+table.table-bordered.dataTable tbody td{
+	vertical-align: middle;
+}
 
 table.dataTable tr.selected td.select-checkbox:after{
-	margin-top:10px;
+	margin-top:19px;
 }
 table.dataTable tr.selected .fa-ellipsis-h{
 	&::before{
@@ -711,6 +714,7 @@ $superInputHeight: 50px;
 		border:none;
 		padding:3px;
 		outline:none;
+    margin-top: -6px;
 	}
 	.delete-url, .delete-group{
 		background-color:#d95450;
